cmake_minimum_required(VERSION 3.17)
project(testSoundLocation)

set(CMAKE_CXX_STANDARD 14)

add_executable(testSoundLocation
        main.h
        main.c
        ppval.c
        abs.c
        abs.h
        bluesteinSetup.c
        bluesteinSetup.h
        CMakeLists.txt
        combineVectorElements.c
        combineVectorElements.h
        diff.h
        fft.c
        diff.c
        fft.h
        fft1.c
        fftshift.c
        fft1.h
        fftshift.h
        fliplr.c
        fliplr.h
        ifft.c
        ifft.h
        interp1.c
        interp1.h
        isfinite.c
        isfinite.h
        main.c
        ppval.h
        pwchcore.c
        pwchcore.h
        rdivide_helper.c
        rdivide_helper.h
        rt_defines.h
        rt_nonfinite.c
        rt_nonfinite.h
        rtGetInf.c
        rtGetInf.h
        rtGetNaN.c
        rtGetNaN.h
        rtwtypes.h
        SoundLocation.c
        SoundLocation.h
        SoundLocation_emxAPI.c
        SoundLocation_emxAPI.h
        SoundLocation_emxutil.c
        SoundLocation_emxutil.h
        SoundLocation_initialize.c
        SoundLocation_initialize.h
        SoundLocation_rtwutil.c
        SoundLocation_terminate.c
        SoundLocation_rtwutil.h
        SoundLocation_terminate.h
        SoundLocation_types.h
        spline.c
        spline.h
        sqrt.c
        sqrt.h
        vvarstd.c
        vvarstd.h
        xnrm2.c
        xnrm2.h
        run.c
        )